# template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
template/: __init__.py  _version.py
template/tests/: test_directories.py
