[tool.poetry]
name = "template"
version = "0.0.1"
description = "Template for creating new python packages"
authors = ["Reuben Brasher <rkbrasher@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "template"}]
include = ["data/*", "README.md", "template/tests/test_data/*"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
poetry = "^2.1.3"
jupyter = "^1.1.1"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
